aded input form

--- a/app/views/layouts/_body.html.erb
+++ b/app/views/layouts/_body.html.erb
@@ -1,5 +1,11 @@
-<nav class="navbar navbar-inverse">
+<div class="navbar navbar-inverse">
+  <form>
+  <div class="form-group">
+    <input type="text" class="form-control" id="toDoItem" placeholder="Add toDo">
   
+  <button type="add" class="btn-add">Add</button>
+  </form>
+
   <div class="checkbox">
     <label><input type="checkbox" value="">Option 1</label>
   
@@ -9,8 +15,9 @@
    <div class="checkbox">
     <label><input type="checkbox" value="">Option 3</label>
   
-  </div> 
+  
+  </div>
   </div>
   </div>
 
-<nav>
+</div>
