--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
-<nav class="navbar navbar-inverse">
+<div class="navbar navbar-inverse">
   <div class="container-fluid bg-info text-white">
     <div class="navbar-header">
         <a class="navbar-brand" href="#">To Do List!</a> 
     </div>
   </div>  
-</nav>
+</div>
