new view does not work

--- a/app/views/layouts/_body.html.erb
+++ b/app/views/layouts/_body.html.erb
@@ -1,23 +1,22 @@
-<div class="navbar navbar-inverse">
-  <form>
-  <div class="form-group">
-    <input type="text" class="form-control" id="toDoItem" placeholder="Add toDo">
-  
-  <button type="add" class="btn-add">Add</button>
-  </form>
+<div >
+  <!--<form method="post">
+    <div class="form-group">
+      <input type="text" class="form-control" id="toDoItem" placeholder="Add toDo">
+      <button class="btn-add">Add</button>
+    </div>  
+  </form> -->
 
   <div class="checkbox">
     <label><input type="checkbox" value="">Option 1</label>
-  
+  </div>
+
   <div class="checkbox">
     <label><input type="checkbox" value="">Option 2</label>
-
-   <div class="checkbox">
+  </div>
+  
+  <div class="checkbox">
     <label><input type="checkbox" value="">Option 3</label>
-  
-  
-  </div>
-  </div>
   </div>
 
 </div>
+
