--- a/app/views/list/index.html.erb
+++ b/app/views/list/index.html.erb
@@ -1,16 +1,17 @@
+
 <nav class="navbar navbar-inverse">
-  
+  <div class="container-fluid bg-info text-white">
+    <div class="navbar-header">
+        <a class="navbar-brand" href="#">To Do List!</a> 
+    </div>
+  </div>  
   <div class="checkbox">
     <label><input type="checkbox" value="">Option 1</label>
-  
+  </div>  
   <div class="checkbox">
     <label><input type="checkbox" value="">Option 2</label>
-
+  </div>
    <div class="checkbox">
-    <label><input type="checkbox" value="">Option 3</label>
-  
+    <label><input type="checkbox" value="">Option 3</label>  
   </div> 
-  </div>
-  </div>
-
 <nav>
