--- a/app/views/elements/edit.html.erb
+++ b/app/views/elements/edit.html.erb
@@ -1,4 +1,7 @@
-<%= form_with scope: :element, url: elements_path, local: true do |form| %>
+<h1>Edit Article</h1>
+ 
+<%= form_with(model: @element, local: true) do |form| %>
+ 
   <% if @element.errors.any? %>
     <div id="error_explanation">
       <h2>
@@ -12,13 +15,15 @@
       </ul>
     </div>
   <% end %>
-  
+ 
   <p>
     <%= form.text_area :text %>
   </p>
-
+ 
   <p>
     <%= form.submit %>
   </p>
+ 
 <% end %>
+ 
 <%= link_to 'Back', elements_path %>
