--- a/app/views/elements/_valid.html.erb
+++ b/app/views/elements/_valid.html.erb
@@ -1,4 +1,5 @@
-<%= form_with scope: :element, url: elements_path, local: true do |form| %>
+<%= form_with(model: @element, local: true) do |form| %>
+ 
   <% if @element.errors.any? %>
     <div id="error_explanation">
       <h2>
@@ -12,13 +13,13 @@
       </ul>
     </div>
   <% end %>
-  
+ 
   <p>
     <%= form.text_area :text %>
   </p>
-
+ 
   <p>
     <%= form.submit %>
   </p>
+ 
 <% end %>
-<%= link_to 'Back', elements_path %>
