--- a/app/views/elements/edit.html.erb
+++ b/app/views/elements/edit.html.erb
@@ -1,29 +1,5 @@
 <h1>Edit Article</h1>
  
-<%= form_with(model: @element, local: true) do |form| %>
- 
-  <% if @element.errors.any? %>
-    <div id="error_explanation">
-      <h2>
-        <%= pluralize(@element.errors.count, "error") %> prohibited
-        this element from being saved:
-      </h2>
-      <ul>
-        <% @element.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
- 
-  <p>
-    <%= form.text_area :text %>
-  </p>
- 
-  <p>
-    <%= form.submit %>
-  </p>
- 
-<% end %>
+<%= render "/elements/valid" %>
  
 <%= link_to 'Back', elements_path %>
