--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html>
+  <header>
+  </header>
   <head>
     <title>ToDoListApp</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-    
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-  
+    <%= stylesheet_link_tag 'application', media: 'all',
+      'data-turbolinks-track': 'reload' %>
+    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>    
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>  
   </head>
   <body>
-    <%= render 'flashes' %>
     <%= yield %> 
   </body>  
 </html>
