--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,3 +14,27 @@
  *= require_self
  */
 
+header{
+ width: 100%;
+ background: #D8E3AB url(log1.png) no-repeat 5% 50%;
+ height: 70px;
+} 
+
+body {
+	background: #D8E3AB;
+	padding: 100px;
+
+}
+
+.title{
+ font-size: 36px;
+ padding-top: 10px;
+ text-align: center;
+}
+.menu{
+ list-style: none;
+ position: absolute;
+ top: 10px;
+ right: 100px;
+}
+
