--- a/app/views/elements/_valid.html.erb
+++ b/app/views/elements/_valid.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @element, remote: true) do |form| %>
+<%= form_with(model: @element, local: true) do |form| %>
  
   <% if @element.errors.any? %>
     <div id="error_explanation">
@@ -8,6 +8,7 @@
       </h2>
       <ul>
         <% @element.errors.full_messages.each do |msg| %>
+          <%= render 'flashes' %>
           <li><%= msg %></li>
         <% end %>
       </ul>
@@ -16,10 +17,7 @@
  
   <p>
     <%= form.text_area :text %>
-  </p>
- 
-  <p>
-    <%= form.button :submit %>
+    <%= form.button :add,  :class => 'submit_class' %>
   </p>
  
 <% end %>
