--- a/app/views/elements/index.html.erb
+++ b/app/views/elements/index.html.erb
@@ -1,15 +1,13 @@
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid bg-info text-white" id='app'>
-    <div class="navbar-header">  
-      <a class="navbar-brand" href="#">To Do List!</a>   
-    </div>
+  <div class="navbar-header" id="id_app">  
+    <a class="navbar-brand" href="#" > {{ app_name }}</a> 
   </div>
   
  <%= render "/elements/valid" %>
     <table>
       <tr>
-        <th>Text</th>
-        <th></th>
+        <th>Important</th>
+        <th>List</th>
+        <th>Operations</th>
       </tr>
       <% @elements.each do |element, task| %>
         <tr>
@@ -32,6 +30,13 @@
   <th><%= sortable "timestamp" %></th>
 </tr>
 
+<script>
+    new Vue({
+    el: '#id_app', //указываем к какому id прицепиться
+    data: { app_name: 'To do list', fontSize: 30}
+  })      
+  
+</script>
 
 
 
