--- a/app/views/elements/_valid.html.erb
+++ b/app/views/elements/_valid.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @element, remote: true) do |form| %>
+<%= form_with(model: @element, id:"new-element") do |form| %>
   <% if @element.errors.any? %>
     <div id="error_explanation">
       <h2>
@@ -7,7 +7,8 @@
       </h2>
       <ul>
         <% @element.errors.full_messages.each do |msg| %>
-          <%= render 'flashes' %>
+          
+
           <li><%= msg %></li>
         <% end %>
       </ul>
