--- a/app/views/elements/index.html.erb
+++ b/app/views/elements/index.html.erb
@@ -2,39 +2,42 @@
   <a class="navbar-brand" href="#" > {{ app_name }}</a> 
 </div>
   
- <%= render "/elements/valid" %>
+<%= render "/elements/valid" %>
 
-    <table>
-      <tr>
-        <th>Todos List</th>
-        <th>Edit</th>
-        <th>Delete</th>
-      </tr>
-      <% @elements.each do |element| %>
-        <tr>
-          <td><div class="checkbox-important">              
-            <%= check_box_tag(element.id, element.id, false, class: 'js-mark-done') %>
-            <%= label_tag(:element, element.text) %>        
-          </div></td>
+<table>
+  <tr>
+    <th>Todos List</th>
+    <th>Edit</th>
+    <th>Delete</th>
+  </tr>
 
-          <td><%= link_to image_tag("edit.png", :border=>0),
-            edit_element_path(element),
-            :title => "edit element?" %></td>
+  <% @elements.each do |element| %>
+    <tr>
+      <td><div class="checkbox-important">              
+          <%= check_box_tag(element.id, element.id, false, class: 'js-mark-done') %>
+          <%= label_tag(:element, element.text) %>        
+      </div></td>
+
+      <td><%= link_to image_tag("edit.png", border:0),
+          edit_element_path(element),
+          :title => "edit element?" %></td>
           
-          <td><%= link_to image_tag("delete.png", :border=>0), element_path(element),
-            method: :delete, data: {confirm: 'Are you sure?'},
-            :title => "delete element?" %></td>
-                 
+      <td><%= link_to image_tag("delete.png", border:0), element_path(element),
+          method: :delete, data: {confirm: 'Are you sure?'},
+          :title => "delete element?" %></td> 
         </tr>
       <% end %>
-    </table>
-<nav>
+      <%= link_to "Delete_all", "/destroy_all", :title => "delete all?" %> 
 
-<tr>
-  <th>Sort by:</th>
-  <th><%= sortable "text" %></th>
-  <th><%= sortable "timestamp" %></th>
-</tr>
+</table>
+
+<table class="pretty">
+  <tr>
+    <th>Sort by:</th>   
+    <th><%= sortable "text" %></th>
+    <th><%= sortable "timestamp" %></th>
+  </tr>
+</table> 
 
 <script>
     new Vue({
